Updated to OpenMx 2.2.4 and metaSEM 0.9.4

--- a/manual/00Index.html
+++ b/manual/00Index.html
@@ -11,7 +11,7 @@
 <div style="text-align: center;">
 <a href="http://stat.ethz.ch/R-manual/R-devel/doc/html/packages.html"><img class="arrow" src="http://stat.ethz.ch/R-manual/R-devel/doc/html/left.jpg" alt="[Up]" /></a>
 <a href="http://stat.ethz.ch/R-manual/R-devel/doc/html/index.html"><img class="arrow" src="http://stat.ethz.ch/R-manual/R-devel/doc/html/up.jpg" alt="[Top]" /></a>
-</div><h2>Documentation for package &lsquo;metaSEM&rsquo; version 0.9.3-1</h2>
+</div><h2>Documentation for package &lsquo;metaSEM&rsquo; version 0.9.4</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
 <li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
@@ -84,8 +84,6 @@
 <td>Create an F matrix to select observed variables</td></tr>
 <tr><td style="width: 25%;"><a href="create.mxMatrix.html">create.mxMatrix</a></td>
 <td>Create a Vector into MxMatrix-class</td></tr>
-<tr><td style="width: 25%;"><a href="deltaMethod.html">deltaMethod</a></td>
-<td>Approximate Variance or Covariance Matrix of Functions Using the Delta Method</td></tr>
 <tr><td style="width: 25%;"><a href="Diag.html">Diag</a></td>
 <td>Matrix Diagonals</td></tr>
 <tr><td style="width: 25%;"><a href="Diag.html">Diag&lt;-</a></td>
