--- a/manual/Becker83.html
+++ b/manual/Becker83.html
@@ -93,7 +93,7 @@ summary( meta(y=di, v=vi, data=Becker83) )
 ## Degrees of freedom: 8
 ## -2 log likelihood: 7.928307 
 ## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
-## Other values indicate problems.)
+## Other values may indicate problems.)
 </code></pre>
 
 <pre><code class="r">## Mixed-effects meta-analysis with log(items) as the predictor
@@ -133,9 +133,9 @@ summary( meta(y=di, v=vi, x=log(items), data=Becker83) )
 ## Degrees of freedom: 7
 ## -2 log likelihood: -4.208024 
 ## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
-## Other values indicate problems.)
+## Other values may indicate problems.)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
