--- a/manual/indirectEffect.html
+++ b/manual/indirectEffect.html
@@ -105,7 +105,7 @@ indirectEffect(x, n=300)
 </code></pre>
 
 <pre><code>##       ind_eff       dir_eff       ind_var   ind_dir_cov       dir_var 
-##  0.1132090432  0.0887911850  0.0006706257 -0.0002732887  0.0031621066
+##  0.1132090110  0.0887913828  0.0006706257 -0.0002732880  0.0031621020
 </code></pre>
 
 <pre><code class="r">## A list of correlation matrices
@@ -113,10 +113,10 @@ indirectEffect( list(x, x), n=c(300,500), standardized=FALSE )
 </code></pre>
 
 <pre><code>##        ind_eff    dir_eff      ind_var   ind_dir_cov     dir_var
-## [1,] 0.1120879 0.08791202 0.0007003811 -0.0002755200 0.003061364
-## [2,] 0.1120879 0.08791213 0.0004196679 -0.0001650916 0.001834363
+## [1,] 0.1120879 0.08791208 0.0007003848 -0.0002755262 0.003061374
+## [2,] 0.1120879 0.08791209 0.0004196680 -0.0001650904 0.001834361
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
