--- a/manual/meta3.html
+++ b/manual/meta3.html
@@ -246,5 +246,5 @@ Methods</em>, <b>2</b>, 61-76.
 <p><code><a href="reml3.html">reml3</a></code>, <code><a href="Cooper03.html">Cooper03</a></code>, <code><a href="Bornmann07.html">Bornmann07</a></code>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
