--- a/manual/vcov.html
+++ b/manual/vcov.html
@@ -112,8 +112,8 @@ vcov(model1)
 </code></pre>
 
 <pre><code>##              Intercept1     Tau2_1_1
-## Intercept1 0.0110460939 0.0004852251
-## Tau2_1_1   0.0004852251 0.0054075547
+## Intercept1 0.0110460922 0.0004852277
+## Tau2_1_1   0.0004852277 0.0054075504
 </code></pre>
 
 <pre><code class="r">## Fixed-effects only
@@ -128,10 +128,10 @@ vcov(model1, select=&quot;fixed&quot;)
 vcov(model1, select=&quot;random&quot;)
 </code></pre>
 
-<pre><code>##             Tau2_1_1
-## Tau2_1_1 0.005407555
+<pre><code>##            Tau2_1_1
+## Tau2_1_1 0.00540755
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
