--- a/manual/wls.html
+++ b/manual/wls.html
@@ -325,10 +325,10 @@ summary(wls.fit1)
 ## 95% confidence intervals: Likelihood-based statistic
 ## Coefficients:
 ##    Estimate Std.Error  lbound  ubound z value Pr(&gt;|z|)
-## a1  0.42159        NA 0.34435 0.50017      NA       NA
-## a2  0.52376        NA 0.44603 0.60472      NA       NA
-## a3  0.57092        NA 0.49204 0.65446      NA       NA
-## a4  0.42159        NA 0.34435 0.50017      NA       NA
+## a1  0.42159        NA 0.34439 0.50013      NA       NA
+## a2  0.52376        NA 0.44601 0.60478      NA       NA
+## a3  0.57092        NA 0.49209 0.65446      NA       NA
+## a4  0.42159        NA 0.34439 0.50013      NA       NA
 ## 
 ## Goodness-of-fit indices:
 ##                                                Value
@@ -432,9 +432,9 @@ summary(wls.fit2)
 ## 95% confidence intervals: Likelihood-based statistic
 ## Coefficients:
 ##              Estimate Std.Error  lbound  ubound z value Pr(&gt;|z|)
-## Amatrix[1,2]  0.16264        NA 0.10103 0.22433      NA       NA
-## Amatrix[1,3]  0.19121        NA 0.12990 0.25262      NA       NA
-## Smatrix[2,3]  0.30000        NA 0.24354 0.35646      NA       NA
+## Amatrix[1,2]  0.16264        NA 0.10106 0.22430      NA       NA
+## Amatrix[1,3]  0.19121        NA 0.12993 0.25259      NA       NA
+## Smatrix[2,3]  0.30000        NA 0.24357 0.35643      NA       NA
 ## 
 ## Goodness-of-fit indices:
 ##                                             Value
@@ -511,14 +511,14 @@ summary(wls.fit3)
 ## 95% confidence intervals: z statistic approximation
 ## Coefficients:
 ##    Estimate Std.Error   lbound   ubound z value  Pr(&gt;|z|)    
-## a1 0.422193  0.063787 0.297173 0.547212  6.6188 3.621e-11 ***
-## a2 0.523188  0.069693 0.386592 0.659785  7.5070 6.040e-14 ***
-## a3 0.570613  0.074822 0.423964 0.717261  7.6263 2.420e-14 ***
-## a4 0.421946  0.060419 0.303527 0.540365  6.9837 2.876e-12 ***
-## e1 1.321745  0.073421 1.177841 1.465648 18.0022 &lt; 2.2e-16 ***
-## e2 1.326269  0.085073 1.159528 1.493010 15.5897 &lt; 2.2e-16 ***
-## e3 1.474396  0.097521 1.283258 1.665533 15.1188 &lt; 2.2e-16 ***
-## e4 1.121955  0.065236 0.994095 1.249814 17.1984 &lt; 2.2e-16 ***
+## a1 0.422193  0.063787 0.297173 0.547213  6.6188 3.621e-11 ***
+## a2 0.523188  0.069694 0.386590 0.659787  7.5069 6.062e-14 ***
+## a3 0.570613  0.074823 0.423963 0.717262  7.6262 2.420e-14 ***
+## a4 0.421946  0.060419 0.303527 0.540366  6.9836 2.876e-12 ***
+## e1 1.321745  0.073423 1.177838 1.465651 18.0018 &lt; 2.2e-16 ***
+## e2 1.326269  0.085074 1.159526 1.493011 15.5895 &lt; 2.2e-16 ***
+## e3 1.474396  0.097522 1.283256 1.665536 15.1186 &lt; 2.2e-16 ***
+## e4 1.121955  0.065237 0.994093 1.249816 17.1982 &lt; 2.2e-16 ***
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
@@ -530,7 +530,7 @@ summary(wls.fit3)
 ## p value of target model                       0.9975
 ## Number of constraints imposed on &quot;Smatrix&quot;    0.0000
 ## DF manually adjusted                          0.0000
-## Chi-square of independence model             78.2629
+## Chi-square of independence model             78.2743
 ## DF of independence model                      6.0000
 ## RMSEA                                         0.0000
 ## SRMR                                          0.0006
@@ -543,5 +543,5 @@ summary(wls.fit3)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
