--- a/manual/HedgesOlkin85.html
+++ b/manual/HedgesOlkin85.html
@@ -98,9 +98,9 @@ summary( meta(y=cbind(d_att, d_ach),
 ## Degrees of freedom: 6
 ## -2 log likelihood: -10.64183 
 ## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
-## Other values indicate problems.)
+## Other values may indicate problems.)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
