--- a/manual/as.mxMatrix.html
+++ b/manual/as.mxMatrix.html
@@ -179,5 +179,5 @@ a4 &lt;- as.mxMatrix(a4)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
