--- a/manual/bdiagMat.html
+++ b/manual/bdiagMat.html
@@ -105,5 +105,5 @@ bdiagMat( list(matrix(letters[1:4],nrow=2,ncol=2),
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
