--- a/manual/homoStat.html
+++ b/manual/homoStat.html
@@ -132,5 +132,5 @@ structural equation models. <em>Structural Equation Modeling</em>,
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
