--- a/manual/issp05.html
+++ b/manual/issp05.html
@@ -65,146 +65,54 @@ people (CS1) and a job useful to society (CS2).
 
 <h3>Examples</h3>
 
-<pre><code class="r">data(issp05)
-
-#### Fixed-effects TSSEM
-fixed1 &lt;- tssem1(issp05$data, issp05$n, method=&quot;FEM&quot;)
-summary(fixed1)
-</code></pre>
-
-<pre><code>## 
-## Call:
-## tssem1FEM(my.df = my.df, n = n, cor.analysis = cor.analysis, 
-##     model.name = model.name, cluster = cluster, suppressWarnings = suppressWarnings, 
-##     silent = silent, run = run)
-## 
-## Coefficients:
-##         Estimate Std.Error z value  Pr(&gt;|z|)    
-## S[1,2] 0.3458561 0.0043977  78.645 &lt; 2.2e-16 ***
-## S[1,3] 0.2957112 0.0045567  64.895 &lt; 2.2e-16 ***
-## S[1,4] 0.1451610 0.0048898  29.686 &lt; 2.2e-16 ***
-## S[1,5] 0.0902536 0.0049431  18.259 &lt; 2.2e-16 ***
-## S[1,6] 0.2058964 0.0047699  43.166 &lt; 2.2e-16 ***
-## S[1,7] 0.2178555 0.0047442  45.920 &lt; 2.2e-16 ***
-## S[2,3] 0.4039986 0.0041682  96.925 &lt; 2.2e-16 ***
-## S[2,4] 0.1941410 0.0047962  40.478 &lt; 2.2e-16 ***
-## S[2,5] 0.1905029 0.0047946  39.732 &lt; 2.2e-16 ***
-## S[2,6] 0.1348611 0.0048969  27.540 &lt; 2.2e-16 ***
-## S[2,7] 0.1432354 0.0048858  29.316 &lt; 2.2e-16 ***
-## S[3,4] 0.2780700 0.0046183  60.211 &lt; 2.2e-16 ***
-## S[3,5] 0.1882149 0.0048160  39.081 &lt; 2.2e-16 ***
-## S[3,6] 0.2530859 0.0046828  54.045 &lt; 2.2e-16 ***
-## S[3,7] 0.2500483 0.0046881  53.337 &lt; 2.2e-16 ***
-## S[4,5] 0.3628188 0.0043414  83.571 &lt; 2.2e-16 ***
-## S[4,6] 0.3779796 0.0042879  88.151 &lt; 2.2e-16 ***
-## S[4,7] 0.3178032 0.0044914  70.758 &lt; 2.2e-16 ***
-## S[5,6] 0.2647942 0.0046388  57.082 &lt; 2.2e-16 ***
-## S[5,7] 0.2541331 0.0046694  54.425 &lt; 2.2e-16 ***
-## S[6,7] 0.6623120 0.0028154 235.247 &lt; 2.2e-16 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## Goodness-of-fit indices:
-##                                       Value
-## Sample size                      40596.0000
-## Chi-square of target model        5305.5769
-## DF of target model                 651.0000
-## p value of target model              0.0000
-## Chi-square of independence model 61872.2338
-## DF of independence model           672.0000
-## RMSEA                                0.0751
-## SRMR                                 0.0902
-## TLI                                  0.9215
-## CFI                                  0.9239
-## AIC                               4003.5769
-## BIC                              -1602.4607
-## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
-## Other values indicate problems.)
-</code></pre>
-
-<pre><code class="r">## Prepare a model implied matrix
-## Factor correlation matrix
-Phi &lt;- create.mxMatrix( c(&quot;0.3*corf2f1&quot;,&quot;0.3*corf3f1&quot;,&quot;0.3*corf3f2&quot;),
-                        type=&quot;Stand&quot;, as.mxMatrix=FALSE )
-
-## Error variances
-Psi &lt;- create.mxMatrix( paste(&quot;0.2*e&quot;, 1:7, sep=&quot;&quot;), type=&quot;Diag&quot;,
-                        as.mxMatrix=FALSE )
-
-## Create Smatrix
-S1 &lt;- bdiagMat(list(Psi, Phi))
-## dimnames(S1)[[1]] &lt;- dimnames(S1)[[2]] &lt;- c(paste(&quot;x&quot;,1:7,sep=&quot;&quot;),
-##                                             paste(&quot;f&quot;,1:3,sep=&quot;&quot;))
-## S1
-S1 &lt;- as.mxMatrix(S1)
-
-## Factor loadings
-Lambda &lt;- create.mxMatrix( c(&quot;.3*f1x1&quot;,&quot;.3*f1x2&quot;,&quot;.3*f1x3&quot;,rep(0,7),
-                             &quot;.3*f2x4&quot;,&quot;.3*f2x5&quot;,rep(0,7),&quot;.3*f3x6&quot;,&quot;.3*f3x7&quot;),
-                           type=&quot;Full&quot;, ncol=3, nrow=7, as.mxMatrix=FALSE )
-Zero1 &lt;- matrix(0, nrow=7, ncol=7)
-Zero2 &lt;- matrix(0, nrow=3, ncol=10)
-
-## Create Amatrix
-A1 &lt;- rbind( cbind(Zero1, Lambda),
-             Zero2 )
-## dimnames(A1)[[1]] &lt;- dimnames(A1)[[2]] &lt;- c(paste(&quot;x&quot;,1:7,sep=&quot;&quot;),
-##                                             paste(&quot;f&quot;,1:3,sep=&quot;&quot;))
-## A1
-A1 &lt;- as.mxMatrix(A1)
-
-## Create Fmatrix
-F1 &lt;- create.Fmatrix(c(rep(1,7), rep(0,3)))
-
-#### Fixed-effects model: Stage 2 analysis
-fixed2 &lt;- tssem2(fixed1, Amatrix=A1, Smatrix=S1, Fmatrix=F1,
-                 intervals.type=&quot;LB&quot;)
-summary(fixed2)
-</code></pre>
-
-<pre><code>## 
-## Call:
-## wls(Cov = pooledS, asyCov = tssem1.obj$acovS, n = sum(tssem1.obj$n), 
-##     Amatrix = Amatrix, Smatrix = Smatrix, Fmatrix = Fmatrix, 
-##     diag.constraints = diag.constraints, cor.analysis = cor.analysis, 
-##     intervals.type = intervals.type, mx.algebras = mx.algebras, 
-##     model.name = model.name, suppressWarnings = suppressWarnings, 
-##     silent = silent, run = run)
-## 
-## 95% confidence intervals: Likelihood-based statistic
-## Coefficients:
-##         Estimate Std.Error  lbound  ubound z value Pr(&gt;|z|)
-## f1x1     0.51979        NA 0.50959 0.52999      NA       NA
-## f1x2     0.64077        NA 0.63084 0.65074      NA       NA
-## f1x3     0.66365        NA 0.65392 0.67340      NA       NA
-## f2x4     0.69218        NA 0.68122 0.70326      NA       NA
-## f2x5     0.53312        NA 0.52284 0.54342      NA       NA
-## f3x6     0.84930        NA 0.84152 0.85714      NA       NA
-## f3x7     0.77875        NA 0.77098 0.78652      NA       NA
-## corf2f1  0.52612        NA 0.51176 0.54055      NA       NA
-## corf3f1  0.42027        NA 0.40783 0.43269      NA       NA
-## corf3f2  0.63541        NA 0.62325 0.64765      NA       NA
-## 
-## Goodness-of-fit indices:
-##                                                 Value
-## Sample size                                40596.0000
-## Chi-square of target model                  1707.9434
-## DF of target model                            11.0000
-## p value of target model                        0.0000
-## Number of constraints imposed on &quot;Smatrix&quot;     0.0000
-## DF manually adjusted                           0.0000
-## Chi-square of independence model           75172.1226
-## DF of independence model                      21.0000
-## RMSEA                                          0.0616
-## SRMR                                           0.0375
-## TLI                                            0.9569
-## CFI                                            0.9774
-## AIC                                         1685.9434
-## BIC                                         1591.2177
-## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
-## Other values indicate problems.)
+<pre><code class="r">## Not run: 
+##D data(issp05)
+##D 
+##D #### Fixed-effects TSSEM
+##D fixed1 &lt;- tssem1(issp05$data, issp05$n, method=&quot;FEM&quot;)
+##D summary(fixed1)
+##D 
+##D ## Prepare a model implied matrix
+##D ## Factor correlation matrix
+##D Phi &lt;- create.mxMatrix( c(&quot;0.3*corf2f1&quot;,&quot;0.3*corf3f1&quot;,&quot;0.3*corf3f2&quot;),
+##D                         type=&quot;Stand&quot;, as.mxMatrix=FALSE )
+##D 
+##D ## Error variances
+##D Psi &lt;- create.mxMatrix( paste(&quot;0.2*e&quot;, 1:7, sep=&quot;&quot;), type=&quot;Diag&quot;,
+##D                         as.mxMatrix=FALSE )
+##D 
+##D ## Create Smatrix
+##D S1 &lt;- bdiagMat(list(Psi, Phi))
+##D ## dimnames(S1)[[1]] &lt;- dimnames(S1)[[2]] &lt;- c(paste(&quot;x&quot;,1:7,sep=&quot;&quot;),
+##D ##                                             paste(&quot;f&quot;,1:3,sep=&quot;&quot;))
+##D ## S1
+##D S1 &lt;- as.mxMatrix(S1)
+##D 
+##D ## Factor loadings
+##D Lambda &lt;- create.mxMatrix( c(&quot;.3*f1x1&quot;,&quot;.3*f1x2&quot;,&quot;.3*f1x3&quot;,rep(0,7),
+##D                              &quot;.3*f2x4&quot;,&quot;.3*f2x5&quot;,rep(0,7),&quot;.3*f3x6&quot;,&quot;.3*f3x7&quot;),
+##D                            type=&quot;Full&quot;, ncol=3, nrow=7, as.mxMatrix=FALSE )
+##D Zero1 &lt;- matrix(0, nrow=7, ncol=7)
+##D Zero2 &lt;- matrix(0, nrow=3, ncol=10)
+##D 
+##D ## Create Amatrix
+##D A1 &lt;- rbind( cbind(Zero1, Lambda),
+##D              Zero2 )
+##D ## dimnames(A1)[[1]] &lt;- dimnames(A1)[[2]] &lt;- c(paste(&quot;x&quot;,1:7,sep=&quot;&quot;),
+##D ##                                             paste(&quot;f&quot;,1:3,sep=&quot;&quot;))
+##D ## A1
+##D A1 &lt;- as.mxMatrix(A1)
+##D 
+##D ## Create Fmatrix
+##D F1 &lt;- create.Fmatrix(c(rep(1,7), rep(0,3)))
+##D 
+##D #### Fixed-effects model: Stage 2 analysis
+##D fixed2 &lt;- tssem2(fixed1, Amatrix=A1, Smatrix=S1, Fmatrix=F1,
+##D                  intervals.type=&quot;LB&quot;)
+##D summary(fixed2)
+## End(Not run)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
