--- a/manual/meta.html
+++ b/manual/meta.html
@@ -261,5 +261,5 @@ confidence intervals in genetic models. <em>Behavior Genetics</em>,
 <code><a href="Berkey98.html">Berkey98</a></code>, <code><a href="wvs94a.html">wvs94a</a></code>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
