--- a/manual/metaSEM-package.html
+++ b/manual/metaSEM-package.html
@@ -32,11 +32,11 @@ Type: </td><td style="text-align: left;"> Package</td>
 </tr>
 <tr>
  <td style="text-align: left;">
-Version: </td><td style="text-align: left;"> 0.9.3-1</td>
+Version: </td><td style="text-align: left;"> 0.9.4</td>
 </tr>
 <tr>
  <td style="text-align: left;">
-Date: </td><td style="text-align: left;"> 2015-05-12</td>
+Date: </td><td style="text-align: left;"> 2015-06-07</td>
 </tr>
 <tr>
  <td style="text-align: left;">
@@ -90,5 +90,5 @@ LazyLoad: </td><td style="text-align: left;"> yes</td>
 <p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to synthesizing covariance matrices in meta-analytic structural equation modeling. <em>Structural Equation Modeling</em>, <b>16</b>, 28-53.
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
