--- a/manual/pattern.n.html
+++ b/manual/pattern.n.html
@@ -76,5 +76,5 @@ pattern.n(Hunter83$data, Hunter83$n)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
