--- a/manual/reml.html
+++ b/manual/reml.html
@@ -213,5 +213,5 @@ Methods</em>, <b>10(3)</b>, 259-284.
 
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
 </body></html>
